--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
       <div class="row">
         <div class="col-12 col-lg-6 mb-3">
           <h4>Send us a message</h4>
-          <form action="#">
+          <form action="https://formspree.io/f/mnqezbab" method="POST">
             <div class="row">
               <div class="col-12 col-sm-6">
                 <div class="form-group">
